# project_template

./: .gitignore  README.md  pyproject.toml
run_scripts/: run_script.py
src/project_template/: __init__.py
