[project]
name = "project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hwijongim", email = "177174082+hwijongim@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
project-template = "project_template:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"
