[project]
name = "project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hwijongim", email = "177174082+hwijongim@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy==1.26.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch==2.0.1",
    "transformers>=4.57.1",
]

[project.scripts]
project-template = "project_template:main"

[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
